reorganized tests/src/main/choral into mustPass mustFail and runtime, also reworked the test framework to take in commandline options that determine which of the three types of tests are run, if any